기본적인 GC 제작해보기 + reflection에 Mark 기능을 추가

--- a/ReflectionStudying/ReflectionStudying.vcxproj
+++ b/ReflectionStudying/ReflectionStudying.vcxproj
@@ -128,11 +128,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GarbageCollection\GCCollector.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Primitives.cpp" />
+    <ClCompile Include="Reflection\Primitives.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Reflect.h" />
+    <ClInclude Include="GarbageCollection\GCCollector.h" />
+    <ClInclude Include="Reflection\Reflect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
