GC로 관리되는 임의로 서로 연결된 10,000개 오브젝트 만들고 테스트 완료.

--- a/ReflectionStudying/ReflectionStudying.vcxproj
+++ b/ReflectionStudying/ReflectionStudying.vcxproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GarbageCollection\GCCollector.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="Reflection\Reflect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
