--- a/ReflectionStudying/ReflectionStudying.vcxproj.filters
+++ b/ReflectionStudying/ReflectionStudying.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="GarbageCollection\GCCollector.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
