Reflect.h 구조 분리 및 함수 이름 출력 부분 오류 수정, unique_ptr 리플렉션 구조 추가(테스트 아직 미진행)

--- a/ReflectionStudying/ReflectionStudying.vcxproj
+++ b/ReflectionStudying/ReflectionStudying.vcxproj
@@ -130,13 +130,18 @@
   <ItemGroup>
     <ClCompile Include="GarbageCollection\GCCollector.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Reflection\Container.h" />
     <ClCompile Include="Reflection\Primitives.cpp" />
+    <ClCompile Include="Reflection\re.cpp" />
+    <ClCompile Include="Reflection\Reference.h" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GarbageCollection\GCCollector.h" />
     <ClInclude Include="Node.h" />
-    <ClInclude Include="Reflection\Reflect.h" />
+    <ClInclude Include="Reflection\Descriptor.h" />
+    <ClInclude Include="Reflection\ReflectMacro.h" />
+    <ClInclude Include="Reflection\Resolver.h" />
     <ClInclude Include="RPC\ObjectRegistry.h" />
     <ClInclude Include="RPC\RPCSystem.h" />
     <ClInclude Include="Timer.h" />
