--- a/ReflectionStudying/ReflectionStudying.vcxproj.filters
+++ b/ReflectionStudying/ReflectionStudying.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="Reflection\Primitives.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="GarbageCollection\GCCollector.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Timer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -47,9 +44,6 @@
     <ClInclude Include="Reflection\ReflectMacro.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
-    <ClInclude Include="GarbageCollection\GCCollector.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Node.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -72,6 +66,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="GarbageCollection\ObjectManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GarbageCollection\TypeDisposerRegistry.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
