--- a/ReflectionStudying/ReflectionStudying.vcxproj.filters
+++ b/ReflectionStudying/ReflectionStudying.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="GarbageCollection\TypeDisposerRegistry.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="GarbageCollection\Object.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
