--- a/ReflectionStudying/ReflectionStudying.vcxproj.filters
+++ b/ReflectionStudying/ReflectionStudying.vcxproj.filters
@@ -53,9 +53,6 @@
     <ClInclude Include="RPC\RPCSystem.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="RPC\ObjectRegistry.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Reflection\Resolver.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -68,10 +65,10 @@
     <ClInclude Include="GarbageCollection\ObjectManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="GarbageCollection\Object.h">
+    <ClInclude Include="ObjectInfo.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="ObjectInfo.h">
+    <ClInclude Include="Reflection\Container_practice.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
